[tool.poetry]
name = "erb-thesis"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
packages = [
    { include = "eegwatch", from = "src" },
    { include = "eegclassify", from = "src" },
]

[tool.poetry.scripts]
eegwatch = "eegwatch.main:main"
eegclassify = "eegclassify.main:main"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.5"
scipy = "^1.4.1"
matplotlib = "^3.2.1"
pandas = "^1.0.4"
mne = "^0.21.0"
mne-bids = "^0.5"
pybv = "^0.3.0"
brainflow = "^3.0.3"
muselsl = {git = "https://github.com/ErikBjare/muse-lsl.git"}
#muselsl = {path = "./vendor/muse-lsl"}
pygatt = {version = "^4.0.5", extras = ["GATTTOOL"]}
vispy = "^0.6.5"
PyQt5 = "^5.15.1"  # required for `muselsl view` to work, due to: https://github.com/alexandrebarachant/muse-lsl/issues/111
pyqtgraph = "^0.11.0"
eeg-notebooks = {git = "https://github.com/ErikBjare/eeg-notebooks.git"}
aw-client = {git = "https://github.com/ActivityWatch/aw-client.git"}
timeslot = {git = "https://github.com/ErikBjare/timeslot.git"}
yasa = "^0.4.0"
entropy = {git = "https://github.com/raphaelvallat/entropy.git"}
coloredlogs = "^14.0"
pylsl = "1.10.5"  # required, see: https://github.com/alexandrebarachant/muse-lsl/issues/136
scikit-learn = "^0.23.2"
pyriemann = "^0.2.6"
xgboost = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "*"
pylint = "^2.5.3"
flake8 = "^3.8.2"
pytest = "^6.0.0"
pytest-cov = "^2.10.1"
pytest-profiling = "^1.7.0"
Pygments = "^2.7.3"  # required to build latex
coverage = {version = "^5.3.1", extras = ["toml"]}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report=term --cov-report=xml --cov-report=html --cov=eegclassify --cov=eegwatch --profile"
testpaths = [
    "src",
    "tests",
    "scripts"
]
python_files = ["*.py",]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain if tests don't hit defensive assertion code
    "raise NotImplementedError"
]

[tool.black]
#line-length = 88
#target-version = ['py37']
#include = '\.pyi?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
