[tool.poetry]
name = "erb-thesis"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
packages = [
    { include = "eegwatch", from = "src" },
    { include = "eegclassify", from = "src" },
]

[tool.poetry.scripts]
eegwatch = "eegwatch.main:main"
eegclassify = "eegclassify.main:main"

[tool.poetry.dependencies]
python = "^3.7, <3.9"  # Less than 3.9 due to numba not having support
numpy = "^1.18.5"
scipy = "^1.4.1"
matplotlib = "^3.2.1"
pandas = "^1.0.4"
mne = "^0.21.0"
mne-bids = "^0.5"
pybv = "^0.3.0"
brainflow = "^3.0.3"
muselsl = {git = "https://github.com/ErikBjare/muse-lsl.git", branch="dev/bleak"}
#muselsl = {path = "./vendor/muse-lsl"}
pygatt = {version = "^4.0.5", extras = ["GATTTOOL"]}
vispy = "^0.6.5"
PyQt5 = "^5.15.1"  # required for `muselsl view` to work, due to: https://github.com/alexandrebarachant/muse-lsl/issues/111
pyqtgraph = "^0.11.0"
eeg-notebooks = {git = "https://github.com/NeuroTechX/eeg-notebooks.git"}
aw-core = {git = "https://github.com/ActivityWatch/aw-core.git"}
aw-client = {git = "https://github.com/ActivityWatch/aw-client.git"}
timeslot = {git = "https://github.com/ErikBjare/timeslot.git"}
yasa = "^0.4.0"
entropy = {git = "https://github.com/raphaelvallat/entropy.git"}
coloredlogs = "^14.0"
pylsl = "1.10.5"  # required, see: https://github.com/alexandrebarachant/muse-lsl/issues/136
scikit-learn = "^0.23.2"
pyriemann = "^0.2.6"
xgboost = "^1.2.1"
bitstring = "^3.1.7"  # depended on by muse-lsl, don't know why it isn't installed
tqdm = "^4.57.0"
wxpython = {platform = "linux", url = "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-20.04/wxPython-4.1.1-cp38-cp38-linux_x86_64.whl"}
Braindecode = {git = "https://github.com/braindecode/braindecode.git"}
torch = "^1.8.1"
imbalanced-learn = "*"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
pylint = "*"
flake8 = "*"
pytest = "^6.0"
pytest-cov = "*"
pytest-profiling = "*"
Pygments = "*"  # required to build latex
coverage = {version = "*", extras = ["toml"]}
ipykernel = "^5.5.0"
nbval = "^0.9.6"
nbqa = "^0.6.1"
sphinx-book-theme = "^0.1.0"
Sphinx = "3.1.1"
myst-nb = "^0.12.3"
types-click = "^0.1.14"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report=term --cov-report=xml --cov-report=html --cov=eegclassify --cov=eegwatch --profile --nbval-lax --current-env"
testpaths = [
    "src",
    "tests",
    "notebooks",
]
python_files = ["*.py", "*.ipynb"]

[tool.mypy]
files = ["src/**/*.py", "tests/*.py", "scripts/*.py"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain if tests don't hit defensive assertion code
    "raise NotImplementedError"
]

[tool.black]
#line-length = 88
#target-version = ['py37']
#include = '\.pyi?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
