[tool.poetry]
name = "erb-thesis"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
packages = [
    { include = "eegwatch", from = "src" },
    { include = "eegclassify", from = "src" },
]

[tool.poetry.scripts]
eegwatch = "eegwatch.main:main"
eegclassify = "eegclassify.main:main"

[tool.poetry.dependencies]
python = "^3.7, <3.9"  # Less than 3.9 due to numba not having support

# Self-made
aw-core = "*"
aw-client = "*"
timeslot = "*"

# General datascience
numpy = "*"
scipy = "*"
matplotlib = "*"
pandas = "*"

# ML
scikit-learn = "^0.23.2"
pyriemann = "^0.2.6"
xgboost = "^1.2.1"
torch = "^1.8.1"
imbalanced-learn = "*"

# EEG-specific
mne = "^0.21.0"
mne-bids = "^0.5"
brainflow = "^3.0.3"
muselsl = {git = "https://github.com/ErikBjare/muse-lsl.git", branch="dev/bleak"}
#muselsl = {path = "./vendor/muse-lsl"}
eeg-notebooks = {git = "https://github.com/NeuroTechX/eeg-notebooks.git"}
yasa = "^0.4.0"
entropy = {git = "https://github.com/raphaelvallat/entropy.git"}
pylsl = "1.10.5"  # required, see: https://github.com/alexandrebarachant/muse-lsl/issues/136
Braindecode = {git = "https://github.com/braindecode/braindecode.git"}

# Bluetooth
pygatt = {version = "^4.0.5", extras = ["GATTTOOL"]}

# UI
PyQt5 = "^5.15.1"  # required for `muselsl view` to work, due to: https://github.com/alexandrebarachant/muse-lsl/issues/111
pyqtgraph = "^0.11.0"
vispy = "^0.6.5"
wxpython = {platform = "linux", url = "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-20.04/wxPython-4.1.1-cp38-cp38-linux_x86_64.whl"}

# Misc
coloredlogs = "^14.0"
bitstring = "^3.1.7"  # depended on by muse-lsl, don't know why it isn't installed
tqdm = "^4.57.0"
pybv = "^0.3.0"
moabb = "^0.4.2"

[tool.poetry.dev-dependencies]
# Linting & formatting
black = "*"
pylint = "*"
flake8 = "*"

# Typechecking
mypy = "*"
types-click = "*"

# Testing
pytest = "^6.0"
pytest-cov = "*"
pytest-profiling = "*"
coverage = {version = "*", extras = ["toml"]}

# Notebook stuff
ipykernel = "*"
nbval = "*"
nbqa = "*"
# Needed due to https://github.com/jupyter/jupyter_client/issues/637
# and because myst-nb hasn't made a new release since bumping the version
myst-nb = {git = "https://github.com/executablebooks/MyST-NB.git"}
#myst-nb = "*"

# Docs
Sphinx = "*"
sphinx-book-theme = "*"
sphinxcontrib-bibtex = "*"
Pygments = "*"  # required to build latex


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report=term --cov-report=xml --cov-report=html --cov=eegclassify --cov=eegwatch --profile --nbval-lax --current-env"
testpaths = [
    "src",
    "tests",
    "notebooks",
]
python_files = ["*.py", "*.ipynb"]

[tool.mypy]
files = ["src/**/*.py", "tests/*.py", "scripts/*.py"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain if tests don't hit defensive assertion code
    "raise NotImplementedError"
]

[tool.black]
#line-length = 88
#target-version = ['py37']
#include = '\.pyi?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
